<resources>
    <string name="app_name">Trempel</string>
    <string name="product_title">Mens Casual Premium Slim Fit T-Shirts</string>
    <string name="product_price_format">$%1$.2f</string>
    <string name="product_score">5</string>
    <string name="product_score_format">%1$.1f (%2$d reviews)</string>
    <string name="product_description">"Slim-fitting style, contrast raglan long sleeve, three-button henley placket, light weight soft fabric for breathable and comfortable wearing. \nAnd Solid stitched shirts with round neck made for durability and a great fit for casual fashion wear and…"</string>
    <string name="btn_add_to_cart">Add to Cart</string>
    <string name="category_title">men’s clothing</string>
    <string name="all_category_title">Categories</string>
    <string name="error_message_in_toast">Something went wrong, try later.</string>
    <string name="sign_in_title">Login to your Account</string>
    <string name="btn_login">Login</string>
    <string name="text_hint_login">Login</string>
    <string name="text_hint_password">Password</string>
    <string name="edit_text_hint_search">What are you looking for?</string>
    <string name="text_hint_search">Search</string>
    <string name="text_home_page">Ready for the shopping?</string>
    <string name="text_btn_home_page">Visit our Categories</string>
    <string name="title_network_excep_dialog">Oops! Connection is unstable</string>
    <string name="title_service_excep_dialog">Something went wrong</string>
    <string name="description_network_excep_dialog">Unfortunately, there are some connection issues on your end. Hit “Retry” to try again.</string>
    <string name="description_service_excep_dialog">Unfortunately, we are currently having some technical problems. Please try again later.</string>
    <string name="btn_close_dialog">Close</string>
    <string name="btn_retry">Retry</string>
    <string name="toast_text_search">You must enter the word</string>
    <string name="text_no_result">No matching results</string>
    <string name="checkout">Checkout</string>
    <string name="total_product_format">Total: %3d items</string>
    <string name="address_format">%s %d, %s %s</string>
    <string name="user_name_format">%s %s</string>
    <string name="user_name_title_profile">Name</string>
    <string name="user_nickname_title_profile">User Name</string>
    <string name="user_phone_number_title_profile">Phone Number</string>
    <string name="user_address_title_profile">Address</string>
</resources>