<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title_dialog"
        style="@style/BaseTextDark.AlertDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_150"
        android:layout_marginTop="@dimen/normal_100"
        android:layout_marginEnd="@dimen/normal_150"
        android:text="@string/title_service_excep_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_descr_dialog"
        style="@style/BaseTextDark.AlertDialogExceptionDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_150"
        android:layout_marginTop="@dimen/small_150"
        android:layout_marginEnd="@dimen/normal_150"
        android:text="@string/description_service_excep_dialog"
        app:layout_constraintBottom_toTopOf="@id/btn_close_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_dialog" />

    <Button
        android:id="@+id/btn_close_dialog"
        style="@style/BaseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="232dp"
        android:layout_marginTop="@dimen/normal_150"
        android:layout_marginEnd="@dimen/normal_150"
        android:layout_marginBottom="@dimen/normal_100"
        android:text="@string/btn_close_dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_descr_dialog" />

</androidx.constraintlayout.widget.ConstraintLayout>